Update and fix Title stretching

--- a/src/Title.scss
+++ b/src/Title.scss
@@ -4,11 +4,17 @@
   font-weight: 300;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  margin-bottom: 1rem;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
   .line {
-    width: calc(100% - 60px);
-    height: .01rem;
-    background-color: white;
+    flex-grow: 1;
+    margin-left: .6rem;
+    height: .05rem;
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+  @media (min-width: 600px) {
+    margin-top: 1.3rem;
+    margin-bottom: 1rem;
   }
 }
